add a sidebar to choose groups and elements (#8)

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer",
-    "pj-sortable-tiles": "Polyjuice/pj-sortable-tiles#gh-pages"
+    "juicy-tiles": "Polyjuice/juicy-tiles#gh-pages",
+    "polymer-ui-menu": "Polymer/polymer-ui-menu",
+    "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item",
+    "polymer-ui-submenu-item": "Polymer/polymer-ui-submenu-item"
   }
 }
