--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "pj-sortable-tiles-editor",
+  "name": "juicy-tiles-editor",
   "version": "0.0.0",
-  "homepage": "https://github.com/Polyjuice/pj-sortable-tiles-editor",
-  "description": "<pj-sortable-tiles-editor> is an editor form for <pj-sortable-tiles>",
+  "homepage": "https://github.com/Juicy/juicy-tiles-editor",
+  "description": "<juicy-tiles-editor> is an editor form for <juicy-tiles>",
   "license": "MIT",
-  "main": "src/pj-sortable-tiles-editor.html",
+  "main": "src/juicy-tiles-editor.html",
   "keywords": [
     "polymer",
     "web-components"
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer",
-    "juicy-tiles": "Polyjuice/juicy-tiles#gh-pages",
+    "juicy-tiles": "Juicy/juicy-tiles#gh-pages",
     "polymer-ui-menu": "Polymer/polymer-ui-menu",
     "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item",
     "polymer-ui-submenu-item": "Polymer/polymer-ui-submenu-item"
