--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "core-selector": "Polymer/core-selector",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
     "juicy-popover": "Juicy/juicy-popover#gh-pages",
+    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
     "core-icon": "Polymer/core-icon#~0.5.2",
     "core-icon-button": "Polymer/core-icon-button#~0.5.2"
   },
