Add an X button to close the layout editor
https://github.com/Polyjuice/Launcher/issues/134

--- a/src/font/config.json
+++ b/src/font/config.json
@@ -13,6 +13,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "5211af474d3a9848f67f945e2ccaf143",
+      "css": "cancel",
+      "code": 59411,
+      "src": "fontawesome"
+    },
+    {
       "uid": "2d3be3e856fc1e4ac067590d2ded1b07",
       "css": "plus-squared-alt",
       "code": 59398,
