Use Juicy/juicy-tile-grid#fractions and flexible dimension

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,6 @@
   "devDependencies": {
     "core-localstorage": "Polymer/core-localstorage#0.4.1",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-grid": "Juicy/juicy-tile-grid#gh-pages"
+    "juicy-tile-grid": "Juicy/juicy-tile-grid#fractions"
   }
 }
