--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,11 @@
     "core-selector": "Polymer/core-selector",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
     "juicy-popover": "Juicy/juicy-popover#gh-pages",
-    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
-    "core-icon": "Polymer/core-icon#~0.5.2",
-    "core-icon-button": "Polymer/core-icon-button#~0.5.2"
+    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages"
   },
   "devDependencies": {
     "core-localstorage": "Polymer/core-localstorage#0.4.1",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "juicy-tile-grid": "Juicy/juicy-tile-grid#fractions"
+    "juicy-tile-grid":  ">=0.3.0"
   }
 }
