--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "polymer": "Polymer/polymer",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
     "juicy-popover": "Juicy/juicy-popover#gh-pages",
-    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages"
+    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
+    "juicy-draggable": "Juicy/juicy-draggable#master"
   },
   "devDependencies": {
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
