--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
     "juicy-tile-list":  ">=1.1.0",
-    "juicy-tile-grid":  ">=1.1.0"
+    "juicy-tile-grid":  ">=1.1.0",
+    "juicy-tile-table":  "tomalec/juicy-tile-table#gh-pages"
   }
 }
