--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
-    "juicy-popover": "Juicy/juicy-popover#gh-pages",
+    "juicy-popover": "Juicy/juicy-popover#~0.0.3",
     "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
     "juicy-draggable": "Juicy/juicy-draggable#gh-pages"
   },
